fix: description alignment

--- a/src/app/[locale]/Welcome.module.css
+++ b/src/app/[locale]/Welcome.module.css
@@ -27,6 +27,8 @@
   padding-top: rem(220px);
   position: relative;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .title {
